# right-ventricle-analysis

./: .gitignore  CMakeLists.txt  README.md
data/: exclude.txt  region-v1.txt  region-v2.txt
data/Healthy control 1/: Healthy control 1_header.txt
data/Healthy control 10/: Healthy control 10.avi  Healthy control 10.txt  Healthy control 10_header.txt
data/Healthy control 11/: Healthy control 11.avi  Healthy control 11.txt  Healthy control 11_header.txt
data/Healthy control 12/: Healthy control 12.avi  Healthy control 12.txt  Healthy control 12_header.txt
data/Healthy control 13/: Healthy control 13.avi  Healthy control 13.txt  Healthy control 13_header.txt
data/Healthy control 14/: Healthy control 14.avi  Healthy control 14.txt  Healthy control 14_header.txt
data/Healthy control 15/: Healthy control 15.avi  Healthy control 15.txt  Healthy control 15_header.txt
data/Healthy control 16/: Healthy control 16.avi  Healthy control 16.txt  Healthy control 16_header.txt
data/Healthy control 17/: Healthy control 17.avi  (+2 more)
output-data/: beutel-data-010323.txt  beutel-data-010423-healthy.txt  beutel-data-010423-tof.txt  beutel-data-040423-healthy1.txt  beutel-data-040423-healthy2.txt  beutel-data-040423-tof.txt  beutel-data-050223-1.txt  beutel-data-050323-2.txt  beutel-data-080323.txt  beutel-data-260323.txt  beutel-data-260423-healthy3.txt  beutel-data-280223.txt
segment-rv/: beutel.txt  pom.xml  region.txt
src/: draw.cpp  draw.h  main.cpp  mesh_loader.cpp  mesh_loader.h  shade.h  strain_calculation.cpp  strain_calculation.h  util.cpp  util.h
(+498 files in other folders)
